--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.1",
+    "firebase": "^9.11.0",
     "gh-pages": "^4.0.0",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.8.1",
